# youtube-elt-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  simple_auth_manager_passwords.json.generated
.github/workflows/: ci.yml
dags/: yt_elt_dag.py
docs/: ERD_data_model_core.drawio  architecture.drawio  data_catalog.md  decisions.md  naming_conventions.md  project_plan.md  requirements.md  runbook.md
soda/: checks_core.yml  checks_marts.yml  checks_staging.yml  configuration.yml
sql/core/: ddl_core.sql  dml_core.sql  dml_soft_delete.sql
sql/marts/: mart_channel_engagement_active.sql  mart_channel_latest_videos.sql  mart_channel_retention.sql  mart_channel_size_distribution.sql  mart_channel_subscribers_vs_engagement.sql  mart_channel_top_likes_rate.sql  mart_channel_top_subscribers.sql  mart_channel_top_views.sql  mart_video_format_engagement.sql  mart_video_top_views.sql
sql/staging/: ddl_staging.sql
src/soda_utils/: soda_checks.py
src/storage/: raw_storage.py  raw_writer.py
src/warehouse/: loader.py  pg_client.py
src/youtube/: channels.py  client.py  extractor.py
templates/: email_failure.html  email_success.html
tests/: conftest.py
tests/unit/: test_client.py  test_extractor.py  test_loader.py  test_raw_storage.py
